--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -4,3 +4,10 @@
 # УНИВЕРСИТЕТ ИНФОРМАЦИОННЫХ ТЕХНОЛОГИЙ,
 # МЕХАНИКИ И ОПТИКИ»
 ### АНО ДПО «СЕГРИС»
+
+##Отчёт по летней практике
+##1 года обучения СЕГРИС
+
+на тему:
+«расчёта ежедневного бюджета»
+
