--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -12,3 +12,6 @@
 
 «расчёта ежедневного бюджета»
 
+### Учащийся	_____________________(А.Н. Кардаильский)
+### Преподаватель	_____________________(В.А. Трусевич)
+### Руководитель программы 	_______________________(В.В. Королёв)
