--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -18,3 +18,10 @@
 # Содержание
 
 # Введение
+2. ПРОЕКТИРОВАНИЕ РАЗРАБОТКИ
+2.1 Обоснование выбора технологий и средств разработки
+Текст
+2.2 Программная реализация 
+Текст
+## Результаты работы интернет-ресурса
+## Созданный сервис является веб-ресурсом, который размещён на хостинге в сети интернет. Для начала работы необходимо установить на ## компьютер браузер, поддерживающий HTML5, CSS3, JavaScript, открыть его, после чего в строке адреса написать: «fsposite.segrys.ru». В ## результате в окне браузера должен открыться созданный веб-сайт. Для входа в редакторскую панель необходимо написать: ## «fsposite.segrys.ru/admin». С подробным техническим описанием работы интернет-ресурса можно ознакомиться в приложении 4 настоящей ## пояснительно записки.
