--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -21,3 +21,12 @@
 # ПРОЕКТИРОВАНИЕ РАЗРАБОТКИ
 ## Результаты работы интернет-ресурса
 ## Созданный сервис является веб-ресурсом, который размещён на хостинге в сети интернет. Для начала работы необходимо установить на   компьютер браузер, поддерживающий HTML5, CSS3, JavaScript, открыть его, после чего в строке адреса написать: «fsposite.segrys.ru». В  результате в окне браузера должен открыться созданный веб-сайт. Для входа в редакторскую панель необходимо написать:  «fsposite.segrys.ru/admin». С подробным техническим описанием работы интернет-ресурса можно ознакомиться в приложении 4 настоящей  пояснительно записки.
+# ЭКОНОМИЧЕСКАЯ ОЦЕНКА РАЗРАБОТКИ
+## Оценка стоимости оборудования
+### Основные фонды (основные средства) – средства производства, которые многократно участвуют в производственном процессе, не изменяя своей натурально-вещественной формы и которые частями, постепенно переносят свою стоимость на продукт.
+### Условия признания актива в качестве основного средства:
+### •	использование в производстве продукции, при выполнении работ или оказании услуг либо для управленческих нужд организации;
+### •	использование в течение длительного времени, т.е. срока полезного использования, продолжительностью свыше 12 месяцев или обычного операционного цикла, если он превышает 12 месяцев;
+### •	организацией не предполагается последующая перепродажа данных активов;
+### •	способность приносить организации экономические выгоды (доход) в будущем.
+### При создании настоящего программного продукта не требуется использования средств и предметов труда, составляющих рабочее место стоимостью более 100 тысяч рублей. Однако, перечисленные ниже объекты техники и мебели были и будут использованы в дальнейшем (не только в рамках описываемого проекта). Поэтому расчёт их стоимости, которую логично было бы включить в себестоимость проекта, следует проводить по аналогии с линейным методом начисления амортизации, используя следующую формулу (1):
