--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -30,3 +30,7 @@
 ### •	организацией не предполагается последующая перепродажа данных активов;
 ### •	способность приносить организации экономические выгоды (доход) в будущем.
 ### При создании настоящего программного продукта не требуется использования средств и предметов труда, составляющих рабочее место стоимостью более 100 тысяч рублей. Однако, перечисленные ниже объекты техники и мебели были и будут использованы в дальнейшем (не только в рамках описываемого проекта). Поэтому расчёт их стоимости, которую логично было бы включить в себестоимость проекта, следует проводить по аналогии с линейным методом начисления амортизации, используя следующую формулу (1):
+### А_ф= Ф_ос×Н_а/100,(1)
+### где Фос – первоначальная стоимость объекта,
+### На – норма амортизации, вычисляемая по формуле (2):
+### Н_а=  (100%)/T_n (2),
