--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -35,3 +35,4 @@
 ### На – норма амортизации, вычисляемая по формуле (2):
 ### A_f - 
 ### Н_а=  (100%)/T_n (2),
+### где Тn – срок полезного использования объекта в месяцах.
