--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -37,3 +37,4 @@
 ### Н_а=  (100%)/T_n (2),
 ### где Тn – срок полезного использования объекта в месяцах.
 ### Используя вышеприведённые формулы, были рассчитана стоимость оборудования, использованного для разработки ПП. Время, отведённое на разработку проекта, составляет 10 месяцев.
+### 1. Персональный компьютер
