--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -8,9 +8,9 @@
 ## Отчёт по летней практике
 ## 1 года обучения СЕГРИС
 
-на тему:
+### на тему:
 
-«расчёта ежедневного бюджета»
+### «расчёта ежедневного бюджета»
 
 ### Учащийся	_____________________(А.Н. Кардаильский)
 ### Преподаватель	_____________________(В.А. Трусевич)
