--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -37,4 +37,16 @@
 ### Н_а=  (100%)/T_n (2),
 ### где Тn – срок полезного использования объекта в месяцах.
 ### Используя вышеприведённые формулы, были рассчитана стоимость оборудования, использованного для разработки ПП. Время, отведённое на разработку проекта, составляет 1 месяц.
-### 1. Персональный компьютер
+## 1. Персональный компьютер.
+### Ежемесячная норма амортизации: 1/84 × 100% ≈  0,01(%);
+### Ежемесячная сумма амортизации: 100000 руб. × 0.01% ≈ 1000 (руб.);
+## 2. Кресло IKEA
+### Ежемесячная норма амортизации: 124 мес. × 100% ≈ 4,16 (%);
+### Ежемесячная сумма амортизации: 7000 руб. × 4,16% ≈ 291,2 (руб.); Сумма амортизации, включаемая в расходы на весь проект: 291,2 руб. × 10 мес. = 2912 (руб.).
+## 4. Стол IKEA
+### Ежемесячная норма амортизации: 124 мес. × 100% ≈ 4,16 (%);
+### Ежемесячная сумма амортизации: 10000 руб. × 4,16% ≈ 416 (руб.); Сумма амортизации, включаемая в расходы на весь проект: 416 руб. × 10 мес. = 4160 (руб.).
+
+### С_обор = ∑Aф𝑖(3), где
+### С_обор – стоимость использованного оборудования,
+### Aф𝑖 – i-тая сумма амортизационных отчислений.
