--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -43,10 +43,23 @@
 ## 2. Кресло IKEA
 ### Ежемесячная норма амортизации: 124 мес. × 100% ≈ 4,16 (%);
 ### Ежемесячная сумма амортизации: 7000 руб. × 4,16% ≈ 291,2 (руб.); Сумма амортизации, включаемая в расходы на весь проект: 291,2 руб. × 10 мес. = 2912 (руб.).
-## 4. Стол IKEA
+## 3. Стол IKEA
 ### Ежемесячная норма амортизации: 124 мес. × 100% ≈ 4,16 (%);
 ### Ежемесячная сумма амортизации: 10000 руб. × 4,16% ≈ 416 (руб.); Сумма амортизации, включаемая в расходы на весь проект: 416 руб. × 10 мес. = 4160 (руб.).
 
 ### С_обор = ∑Aф𝑖(3), где
 ### С_обор – стоимость использованного оборудования,
 ### Aф𝑖 – i-тая сумма амортизационных отчислений.
+
+### менова-ние оборудо-вания Первона-чальная сто-имость, руб. Срок полез-ного исполь-зования Фактический срок использо-вания «на про-ект» Стоимость оборудо-вания «на проект» (амортизация), руб.
+
+### 1 2 3 4 5
+
+### Ноутбук 80000 48 месяцев 10 месяцев 16640
+
+### Стол 10000 24 месяца 10 месяцев 4160
+
+### Кресло 7000 24 месяца 10 месяцев 2912
+
+
+Итого 24160
