--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -51,15 +51,15 @@
 ### С_обор – стоимость использованного оборудования,
 ### Aф𝑖 – i-тая сумма амортизационных отчислений.
 
-### менова-ние оборудо-вания Первона-чальная сто-имость, руб. Срок полез-ного исполь-зования Фактический срок использо-вания «на про-ект» Стоимость оборудо-вания «на проект» (амортизация), руб.
+### Наименова-ние оборудо-вания; Первона-чальная сто-имость, руб.; Срок полез-ного исполь-зования; Фактический срок использо-вания «на про-ект; Стоимость оборудо-вания «на проект» (амортизация), руб.
 
 ### 1 2 3 4 5
 
-### Ноутбук 80000 48 месяцев 10 месяцев 16640
+### Персональный компьютер 100000 84 месяца 1 месяц 16640
 
-### Стол 10000 24 месяца 10 месяцев 4160
+### Стол 10000 24 месяца 1 месяц 4160
 
-### Кресло 7000 24 месяца 10 месяцев 2912
+### Кресло 7000 24 месяца 1 месяц 2912
 
 
 Итого 24160
