--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -62,4 +62,98 @@
 ### Кресло 7000 24 месяца 1 месяц 2912
 
 
-Итого 24160
+### Итого 24160
+
+
+## 3.1.2 Оценка стоимости оборотных средств
+
+### Оборотные средства предприятий - это совокупность средств предприятий, выраженных в денежной форме, одноразово участвовавших в производственном процессе, видоизменивших свою натурально-вещественную форму и полностью переносящую свою стоимость на производственный продукт.
+
+### Стоимость оборотного капитала рассчитывается по формуле (4): 𝑂𝑜𝑘=𝑃ед×𝐾 (4),
+
+### где Оок – сумма оборотного капитала,
+
+### Ред – цена единицы ресурса,
+
+### К – кол-во истраченных ресурсов.
+
+### Ресурсы:
+
+### * Электроэнергия – количество единиц потраченной электроэнергии рассчитывается исходя из времени работы разработчика в месяцах. В среднем на 1 месяц работы расходуется 45Квт.
+
+### * Интернет.
+
+### Для определения суммы ОК используется формула (5).
+
+### С_ок = ∑Оок𝑖 (5), где
+
+### Сок – величина ОК,
+
+## О_ок𝑖 – i-тая сумма ОК.
+
+### Результаты всех расчетов оборотных средств представлены в таблице 5.
+
+### Расчёт стоимости оборотных средств
+
+### Ресурс ; Цена единицы ; Количество ре-сурса ; Стоимость, руб.
+
+### Электроэнергия 1000 руб./месяц 1000
+
+### Интернет 300 руб/месяц 1 месяц 300
+
+### Итого: 1300
+
+## 3.1.4 Расчет взносов во внебюджетные фонды
+
+### Государственный внебюджетный фонд — фонд денежных средств, образуемый вне федерального бюджета и бюджетов субъектов Российской Федерации и предназначенный для реализации конституционных прав граждан на пенсионное обеспечение, социальное страхование, охрану здоровья и медицинскую помощь.
+
+### Основными по размерам и значению являются социальные внебюджетные фонды:
+
+### * Пенсионный фонд Российской Федерации (ПФ);
+
+### * Фонд социального страхования Российской Федерации (ФСС);
+
+### * Федеральный фонд обязательного медицинского страхования (ФФОМС).
+
+### Взносы в ПФ составляют 22% от ФОТ, в ФСС – 2,9% и в ФФОМС – 5,1%.
+
+### Расчет взносов во внебюджетные фонды:
+
+### Пенсионный фонд – 0,22*17764 = 3908,08 руб.
+
+### Фонд социального страхования – 0,029*17764 = 515,156 руб.
+
+### Федеральный фонд ОМС – 0,051*17764 = 905,964 руб.
+
+
+### Итого: 5329,2 руб.
+
+## 3.1.5 Расчет непредвиденных расходов
+
+### Непредвиденные расходы – это расходы предприятия, размер которых не может быть рассчитан при составлении финансового плана. В случае разработки ПО непредвиденные расходы могут возникнуть, например, вследствие поломки оборудования и т.п.
+
+### Непредвиденные расходы рассчитываются как 10% от фонда оплаты труда и составляют: 𝐶нр=17764 руб. ×10%=1776,4 руб.
+
+### где Снр – величина непредвиденных расходов.
+
+## 3.1.6 Оценка себестоимости разработки ПП
+
+### Исходя из выбранного метода калькулирования себестоимости, были получены следующие результаты, представленные в таблице 7.
+
+### Таблица 7
+
+### Расчет себестоимости разработки ПП
+
+### Элемент затрат ; Сумма, руб. ; Доля в общей сумме затрат
+
+### Оборудование 24160 44.7%
+
+### Оборотные средства 10080 11.4%
+
+### ФОТ 17764 30.7%
+
+### Взносы во внебюджетные фонды 5329,2 9.84%
+
+### Непредвиденные расходы 1776,4 3.26%
+
+### Итого 59309.6 100 %
