--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -155,3 +155,13 @@
 ### Непредвиденные расходы 0   0%
 
 ### Итого 14701   100 %
+### На рисунке 3 представлена круговая диаграмма с наглядным долевым распределением затрат.
+
+### (Смотрите скриншот в Documents)
+Рисунок 3 Долевое распределение затрат
+
+### Общая сумма себестоимости продукта равна 59109,6 руб. Большую долю в затратах занимает Фонд оплаты труда, потому что в разработке принимало участие большое количество сотрудников, работу которых необходимо оплачивать, а также стоимость оборудования. В ходе экономической оценки проекта был решен ряд задач для достижения поставленной цели. Решение задач представляло собой анализ предприятия-заказчика, его структуры, планирование производства и общий расчет затрат на разработку.
+### Таким образом, после проведения данного исследования, разработка ди-пломного проекта была обоснована с экономической точки зрения.
+
+
+Таким образом, после проведения данного исследования, разработка ди-пломного проекта была обоснована с экономической точки зрения.
