--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -154,6 +154,8 @@
 
 ### Непредвиденные расходы 0   0%
 
+### ФОТ 0   0%
+
 ### Итого 14701   100 %
 ### На рисунке 3 представлена круговая диаграмма с наглядным долевым распределением затрат.
 
@@ -164,4 +166,117 @@
 ### Таким образом, после проведения данного исследования, разработка ди-пломного проекта была обоснована с экономической точки зрения.
 
 
-Таким образом, после проведения данного исследования, разработка ди-пломного проекта была обоснована с экономической точки зрения.
+### Таким образом, после проведения данного исследования, разработка ди-пломного проекта была обоснована с экономической точки зрения.
+
+
+# ЗАКЛЮЧЕНИЕ
+
+### В процессе разработки проекта были решены следующие задачи:
+
+### * сформулирована задача;
+
+### * изучена предметная область;
+
+### * рассмотрены аналогичные решения;
+
+### * обоснована целесообразность разработки;
+
+### * сформулированы функциональные требования к разработке;
+
+### * проведено функциональное моделирование;
+
+### * обоснован выбор средств реализации;
+
+### * разработано техническое задание на разработку;
+
+### * проведена экономическая оценка;
+
+### * разработан программный продукт;
+
+### * сформировано техническое описание разработки;
+
+## Таким образом, задачи, поставленные в рамках разработки проекта, выполнены. Все поставленные цели достигнуты.
+
+# СПИСОК ИСПОЛЬЗОВАННЫХ ИСТОЧНИКОВ
+
+### 1. Справочник Java Script: [Электронный ресурс] URL: https://javascript.ru.
+
+### 2. Справочник Java Script: [Электронный ресурс] URL: https://learn.javascript.ru.
+
+### 3. Справочник Java Script: [Электронный ресурс] URL: https://developer.mozilla.org/ru/docs/Web/JavaScript.
+
+### 4. Справочник HTML: [Электронный ресурс] URL:http://htmlbook.ru/html.
+
+### 5. Реальный аналог моего сайта: [Электронный ресурс] URL: http://www.fuckgrechka.ru/tzlvt/.
+
+
+
+# Приложение 1
+## Техническое задание
+
+
+
+## 1. НАЗНАЧЕНИЕ РАЗРАБОТКИ
+
+### Назначением разработки является представление и распространение информации в сети Интернет о деятельности факультета среднего профессио-нального образования Университета ИТМО.
+
+## 2. ЦЕЛЬ И ЗАДАЧИ
+
+### Целью проекта является разработка информационного интернет-ресурса.
+
+### Для достижения поставленной цели необходимо выполнить следующие задачи:
+
+### 1. Проанализировать требования к разработке.
+
+### 2. Проанализировать модель работы интернет-ресурса.
+
+### 3. Спроектировать и реализовать программу сервера.
+
+### 4. Спроектировать и реализовать интерфейс:
+
+### 5. Провести тестирование разработки.
+
+### 6. Загрузка разработки в репозиторий https://github.com/.
+
+
+
+# ПРИЛОЖЕНИЕ 4
+## Техническое описание
+
+
+
+## 1. ОБЩИЕ СВЕДЕНИЯ О РАЗРАБОТКИ
+
+### 3.8 Описание файлов программы.
+
+### В таблице П4.2 представлен список файлов, отвечающих за основные функции и обрабатывающих все входные данные.
+
+### Описание файлов интернет-ресурса.
+
+### Файл ; Назначение
+
+### IsDigit() ; Проверяет на наличие букв в строке. Если есть-выдаёт false, если нету-выдёт true.
+
+
+
+# 2. ОПИСАНИЕ ВЫПОЛНЕНИЯ ПРОГРАММЫ
+
+##  2.1 Способ вызова программы
+
+###  Созданный сервис является веб-ресурсом, который размещён на хостинге в сети интернет. Для начала работы необходимо установить на компьютер брау-зер, поддерживающий HTML5, CSS3, JavaScript, открыть его, после чего в строке адреса написать: «version 1.0 (1).ru». В результате в окне браузера должен открыться созданный веб-сайт.
+
+### 2.2 Описание функциональных возможностей пользователей
+
+###  В созданном интернет-ресурсе существуют следующие классы пользова-телей:
+
+####  * посетитель интернет-ресурса (пользователь);
+
+Ниже приведены скриншоты использования интернет-ресурса, представ-лены основные функции и интерфейсы пользователя, администратора и редак-тора.
+
+Главная страница интернет-ресурса, точка входа (рисунок П4.1)
+
+Страница о вступительной кампании, со списком рейтинга абитуриентов и списком зачисленных (рисунок П4.2)
+
+Страница содержащая правила приёма на образовательные программы фа-культета (рисунок П4.3)
+
+Страница с отзывами выпускников и студентов факультета (рисунок П4.4)
