--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -271,12 +271,19 @@
 
 ####  * посетитель интернет-ресурса (пользователь);
 
-Ниже приведены скриншоты использования интернет-ресурса, представ-лены основные функции и интерфейсы пользователя, администратора и редак-тора.
+##   Ниже приведены скриншоты использования интернет-ресурса, представ-лены основные функции и интерфейсы пользователя, администратора и редак-тора.
 
-Главная страница интернет-ресурса, точка входа (рисунок П4.1)
+### Главная страница интернет-ресурса, точка входа (рисунок П4.1)
 
-Страница о вступительной кампании, со списком рейтинга абитуриентов и списком зачисленных (рисунок П4.2)
+### Страница регистрации (рисунок П4.1)
 
-Страница содержащая правила приёма на образовательные программы фа-культета (рисунок П4.3)
+### Страница входа в сеть (рисунок П4.2)
 
-Страница с отзывами выпускников и студентов факультета (рисунок П4.4)
+### Финальная страница (рисунок П4.3)
+
+
+## Рисунок П4.2(Смотрите скриншот в Documents)
+
+## Рисунок П4.2(Смотрите скриншот в Documents)
+
+## Рисунок П4.2(Смотрите скриншот в Documents)
