--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -20,7 +20,7 @@
 # Введение
 # ПРОЕКТИРОВАНИЕ РАЗРАБОТКИ
 ## Результаты работы интернет-ресурса
-## Созданный сервис является веб-ресурсом, который размещён на хостинге в сети интернет. Для начала работы необходимо установить на   компьютер браузер, поддерживающий HTML5, CSS3, JavaScript, открыть его, после чего в строке адреса написать: «fsposite.segrys.ru». В  результате в окне браузера должен открыться созданный веб-сайт. Для входа в редакторскую панель необходимо написать:  «fsposite.segrys.ru/admin». С подробным техническим описанием работы интернет-ресурса можно ознакомиться в приложении 4 настоящей  пояснительно записки.
+## Созданный сервис является веб-ресурсом, который размещён на хостинге в сети интернет. Для начала работы необходимо установить на   компьютер браузер, поддерживающий HTML5, CSS3, JavaScript, открыть его, после чего в строке адреса написать: «version 1.0 (1).ru». В  результате в окне браузера должен открыться созданный веб-сайт. С подробным техническим описанием работы интернет-ресурса можно ознакомиться в приложении 4 настоящей  пояснительно записки.
 # ЭКОНОМИЧЕСКАЯ ОЦЕНКА РАЗРАБОТКИ
 ## Оценка стоимости оборудования
 ### Основные фонды (основные средства) – средства производства, которые многократно участвуют в производственном процессе, не изменяя своей натурально-вещественной формы и которые частями, постепенно переносят свою стоимость на продукт.
