--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -267,11 +267,11 @@
 
 ### 2.2 Описание функциональных возможностей пользователей
 
-###  В созданном интернет-ресурсе существуют следующие классы пользова-телей:
+###  В созданном интернет-ресурсе существуют следующие классы пользователей:
 
 ####  * посетитель интернет-ресурса (пользователь);
 
-##   Ниже приведены скриншоты использования интернет-ресурса, представ-лены основные функции и интерфейсы пользователя, администратора и редак-тора.
+##   Ниже приведены скриншоты использования интернет-ресурса, представлены основные функции и интерфейсы пользователя.
 
 ### Главная страница интернет-ресурса, точка входа (рисунок П4.1)
 
