--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -236,7 +236,7 @@
 
 ### 5. Провести тестирование разработки.
 
-### 6. Загрузка разработки в репозиторий https://github.com/.
+### 6. Загрузка разработки в репозиторий https://github.com/Crimor16/SegrysProject.
 
 
 
