--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -1,1 +1,5 @@
-
+## Предметная область
+Деньги не бесконечны.
+Приложение показывает, сколько стоит потратить сегодня, а сколько оставить на завтра.
+Считает новый бюджет на ходу, пока вы вводите трату.
+Приложение показывает правду: если потратите слишком сильно сегодня, уменьшит сумму на завтра.
