--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -1,5 +1,10 @@
-## Предметная область
+## Предметная область:
 Деньги не бесконечны.
 Приложение показывает, сколько стоит потратить сегодня, а сколько оставить на завтра.
 Считает новый бюджет на ходу, пока вы вводите трату.
 Приложение показывает правду: если потратите слишком сильно сегодня, уменьшит сумму на завтра.
+## Функционал проекта:
+### О регестрации и входе в сеть:
+Проект имеет систему регистрации и входа в сеть.
+Логины и пароли находятся в Локальном хранилище.
+### О самом приложении:
