--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -8,3 +8,13 @@
 Проект имеет систему регистрации и входа в сеть.
 Логины и пароли находятся в Локальном хранилище.
 ### О самом приложении:
+Для начала пользователю нужно ввести бюджет, валюту, и кол-во дней на которые нужно растянуть деньги.
+Пока пользователь это не сделает будет вылетать ошибка.
+За тем появится норма которую вам стоит потратить завтра.
+После этого вы сможете ввести сумму которую растратели за день.
+Это поле вы будете должны заполнять каждый день.
+Если вы потратите меньше этой суммы, вам вылетит поздравление и ваша норма на завтра увеличется.
+Соответственно если вы потратите всё накопленное за прошлый день, то ваша норма на завтра вернётся в изначальную.
+Если вы потратите больше этой суммы, вам вылетит предупреждение и ваша норма на завтра уменьшится.
+Соответственно если вы потратите меньше это суммы, то ваша норма на завтра вернётся в изначальную и при этом увеличется.
+Если вы потратите ровно эту сумму, вам так же вылетит поздравление, но ваша норма на завтра останется на месте.
