--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -7,6 +7,15 @@
 ### О регестрации и входе в сеть:
 Проект имеет систему регистрации и входа в сеть.
 Логины и пароли находятся в Локальном хранилище.
+Существует возможность выйти и из аккаунта, а так же удалить аккаунт.
+При нажатии на "Выйти из аккаунта.", вас перенесёт на главную страницу сайта.
+Что бы полностью защитить ваш аккаунт вам нужно будет так же выйти с сайта полностью.
+При нажатии на "Удалить аккаунт.", вас так же перенесёт на главную страницу, но при этом ещё совершатся следующие действия:
+1.Ваш логин и пароль удалятся из Локального хранилища и соответственно со всего сайта.
+2.Удалятся все поля которые были заполнены вами.
+Когда вы создаёте аккаунт при уже имеющимся аккаунте произойдут все те же действия, что и при кнопке "Удалить аккаунт.",
+но вместо удаления вашего логина и пароля они заменятся на логин и пароль от вашего нового аккаунта.
+По этому перед созданием аккаунта вам вылетит предупреждение.
 ### О самом приложении:
 Для начала пользователю нужно ввести бюджет, валюту, и кол-во дней на которые нужно растянуть деньги.
 Пока пользователь это не сделает будет вылетать ошибка.
