--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -27,3 +27,4 @@
 Если вы потратите больше этой суммы, вам вылетит предупреждение и ваша норма на завтра уменьшится.
 Соответственно если вы потратите меньше это суммы, то ваша норма на завтра вернётся в изначальную и при этом увеличется.
 Если вы потратите ровно эту сумму, вам так же вылетит поздравление, но ваша норма на завтра останется на месте.
+## Описание программного кода:
