--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -28,3 +28,22 @@
 Соответственно если вы потратите меньше это суммы, то ваша норма на завтра вернётся в изначальную и при этом увеличется.
 Если вы потратите ровно эту сумму, вам так же вылетит поздравление, но ваша норма на завтра останется на месте.
 ## Описание программного кода:
+Финальный сайт разделён на 4 части:
+1)Главная страница.
+2)Регистрация.
+3)Вход в сеть.
+4)Приложение.
+По порядку о каждой части.
+### Главная страница:
+Это самая простая по созданию страница.
+Она встречает пользователя и пользователь ознокамливается с функционалом сайта.
+Здесь пользователь понимает нужен ему этот сайта или нет.
+Из этого сайта видут 3 дороги в 2 места.
+2 дороги идут в 2 часть - регистрацию.
+1- ссылка которая меняет цвет на более светлый.
+2- кнопка которая также меняет цвет, но медленно.
+Для кнопки используются такие стили как:
+
+1 дорога идёт в 3 часть - вход в сеть.
+### Регистрация
+Это 2 по сложности 
