--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -11,8 +11,11 @@
 При нажатии на "Выйти из аккаунта.", вас перенесёт на главную страницу сайта.
 Что бы полностью защитить ваш аккаунт вам нужно будет так же выйти с сайта полностью.
 При нажатии на "Удалить аккаунт.", вас так же перенесёт на главную страницу, но при этом ещё совершатся следующие действия:
+
 1.Ваш логин и пароль удалятся из Локального хранилища и соответственно со всего сайта.
+
 2.Удалятся все поля которые были заполнены вами.
+
 Когда вы создаёте аккаунт при уже имеющимся аккаунте произойдут все те же действия, что и при кнопке "Удалить аккаунт.",
 но вместо удаления вашего логина и пароля они заменятся на логин и пароль от вашего нового аккаунта.
 По этому перед созданием аккаунта вам вылетит предупреждение.
@@ -29,10 +32,15 @@
 Если вы потратите ровно эту сумму, вам так же вылетит поздравление, но ваша норма на завтра останется на месте.
 ## Описание программного кода:
 Финальный сайт разделён на 4 части:
+
 1)Главная страница.
+
 2)Регистрация.
+
 3)Вход в сеть.
+
 4)Приложение.
+
 По порядку о каждой части.
 ### Главная страница:
 Это самая простая по созданию страница.
@@ -40,9 +48,31 @@
 Здесь пользователь понимает нужен ему этот сайта или нет.
 Из этого сайта видут 3 дороги в 2 места.
 2 дороги идут в 2 часть - регистрацию.
+
 1- ссылка которая меняет цвет на более светлый.
+
 2- кнопка которая также меняет цвет, но медленно.
+
 Для кнопки используются такие стили как:
+
+.button{
+    margin-left: 35%;
+    margin-top: 5%;
+    width: 30%;
+    height: 80px;
+    border-radius: 3px;
+    background-color: #ffa500;;
+    border: 1px solid #e2dc16;
+    outline: none;
+    box-shadow: 0 0 40px #0400ff;
+    cursor: pointer;
+    font-size: 30px;
+    color: blue;
+  }
+.button:hover{
+    background: #ffc300;
+    transition: width 2s, height 2s, background-color 2s, transform 4s;	
+  }
 
 1 дорога идёт в 3 часть - вход в сеть.
 ### Регистрация
