--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -56,22 +56,39 @@
 Для кнопки используются такие стили как:
 
 .button{
+
     margin-left: 35%;
+    
     margin-top: 5%;
+    
     width: 30%;
+    
     height: 80px;
+    
     border-radius: 3px;
-    background-color: #ffa500;;
+    
+    background-color: #ffa500;
+    
     border: 1px solid #e2dc16;
+    
     outline: none;
+    
     box-shadow: 0 0 40px #0400ff;
+    
     cursor: pointer;
+    
     font-size: 30px;
+    
     color: blue;
+    
   }
+  
 .button:hover{
+
     background: #ffc300;
+    
     transition: width 2s, height 2s, background-color 2s, transform 4s;	
+    
   }
 
 1 дорога идёт в 3 часть - вход в сеть.
