--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -44,6 +44,7 @@
 По порядку о каждой части.
 ### Главная страница:
 Это самая простая по созданию страница.
+
 Она встречает пользователя и пользователь ознокамливается с функционалом сайта.
 Здесь пользователь понимает нужен ему этот сайта или нет.
 Из этого сайта видут 3 дороги в 2 места.
@@ -92,5 +93,9 @@
   }
 
 1 дорога идёт в 3 часть - вход в сеть.
-### Регистрация
-Это 2 по сложности 
+### Регистрация:
+Это 2 по сложности страница.
+
+
+
+
