--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -97,8 +97,17 @@
 
 1 дорога идёт в 3 часть - вход в сеть.
 ### Регистрация:
-Это 2 по сложности страница.
+Это 3 по сложности страница.
 
+Здесь уже есть алгоритм.
 
+Здесь есть 3 проверки:
 
+1 проверка - проверка на заполнение полей.
+(Если заполнены не все поля-вылетит ошибка "Не все обязательные поля были заполнены.".)
 
+2 проверка - проверка на 1 элемент.
+(Если 1 элемент - пробел-вылетит ошибка "В строках 1 элемент не должен быть пробелом.".)
+
+3 проверка - проверка на поля с паролями.
+(Если пароли не совпадают-вылетит ошибка "Пароли не совпадают.".)
