--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -57,7 +57,7 @@
 
 2- кнопка которая также меняет цвет, но медленно.
 
-Для кнопки используются такие стили как:
+Для кнопки используются такие свойства CSS как:
 
 .button{
 
