--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -95,7 +95,7 @@
     
   }
 
-1 дорога идёт в 3 часть - вход в сеть.
+3 дорога идёт в 3 часть - вход в сеть.
 ### Регистрация:
 Это 3 по сложности страница.
 
@@ -111,3 +111,13 @@
 
 3 проверка - проверка на поля с паролями.
 (Если пароли не совпадают-вылетит ошибка "Пароли не совпадают.".)
+
+Из этого сайта идут так же 3 дороги.
+
+1- ссылка "Уже есть аккаунт?". Как не трудно было догадаться она ведёт в 3 часть - вход в сеть.
+
+2- кнопка "Вернуться на главную страницу". Она ведёт в 1 часть - Главная страница.
+
+3- кнопка "Создать аккаунт.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - приложение.
+Об этой части мы поговорим чуть позже.
+### Вход в сеть.
