--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -112,12 +112,59 @@
 3 проверка - проверка на поля с паролями.
 (Если пароли не совпадают-вылетит ошибка "Пароли не совпадают.".)
 
+Соответственно если эти 3 проверки не выдали вам ошибки, т.е. вы ввели всё верно, то в Локальное хранилище добавится ваш логин и пароль.
+Так же вы перейдёте в 4 часть - Приложение.
+Вот алгоритм с 3 проверкам:{
+
+'use strict' --- находит ошибки в коде.
+let login = document.getElementById('text-1'); --- создаёт переменную и кладёт в неё строку с логином.
+let password = document.getElementById('text-2'); --- создаёт переменную и кладёт в неё строку с паролем.
+let password2 = document.getElementById('text-3'); --- создаёт переменную и кладёт в неё строку с подтверждением пароля.
+let button = document.getElementById('button'); --- создаёт переменную и кладёт в неё кнопку
+alert("Внимание!\nЕсли вы при уже имеющимся аккаунте создадите новый, то старый аккаунт полностью удалится и заменится на этот."); ---    предупреждение.
+button.addEventListener('click', function(){ --- воспроизводит нижеперечисленные действия по нажатию кнопки.
+	let a = document.getElementById('text-1').value; --- создаёт переменную и кладёт в неё значение строки с логином.
+	let a1 = document.getElementById('text-2').value; --- создаёт переменную и кладёт в неё значение строки с паролем
+	let a2 = document.getElementById('text-3').value; --- создаёт переменную и кладёт в неё значение строки с подтверждением пароля.
+	if(login.checkValidity()&password.checkValidity()&password2.checkValidity()){  --- проверяет все ли обязательные поля заполнены.
+		if(a[0]!=" "&a1[0]!=" "&a2[0]!=" "){ --- проверяет не является ли 1 символ пробелом.
+			if(a1 === a2){ --- проверяет равны ли пароли
+				localStorage.setItem('login3965', a); --- создаёт логин в Локальном хранилище.
+				localStorage.setItem('password3965', a1); --- создаёт пароль в Лакальном хранилище.
+
+				localStorage.removeItem('date'); --- удаляет 1 из элементов 4 части - Приложение.
+				localStorage.removeItem('select'); --- удаляет 1 из элементов 4 части - Приложение.
+				localStorage.removeItem('text'); --- удаляет 1 из элементов 4 части - Приложение.
+				localStorage.removeItem('pre-last'); --- удаляет 1 из элементов 4 части - Приложение.
+				localStorage.removeItem('today'); --- удаляет 1 из элементов 4 части - Приложение.
+				localStorage.removeItem('last'); --- удаляет 1 из элементов 4 части - Приложение.
+					
+				location.href = '../HTML/version 1.0 (3).html'; --- перемещает пользователя в 4 часть - Приложение.
+			}
+			else --- если пароли не совпадают
+			{
+				alert("Пароли не совпадают.") --- выносит ошибку "Пароли не совпадают.".
+			};
+		}
+		else --- если 1 элемент- пробел
+		{
+			alert("В строках 1 элемент не должен быть пробелом.") --- выносит ошибку "В строках 1 элемент не должен быть пробелом.".
+		}
+	}
+	else --- если не все поля заполнены
+	{
+		alert("Не все обязательные поля были заполнены.") --- выносит ошибку "Не все обязательные поля были заполнены.".
+	};
+});
+
+}
+
 Из этого сайта идут так же 3 дороги.
 
 1- ссылка "Уже есть аккаунт?". Как не трудно было догадаться она ведёт в 3 часть - вход в сеть.
 
 2- кнопка "Вернуться на главную страницу". Она ведёт в 1 часть - Главная страница.
 
-3- кнопка "Создать аккаунт.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - приложение.
+3- кнопка "Создать аккаунт.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - Приложение.
 Об этой части мы поговорим чуть позже.
 ### Вход в сеть.
