--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -115,7 +115,7 @@
 Соответственно если эти 3 проверки не выдали вам ошибки, т.е. вы ввели всё верно, то в Локальное хранилище добавится ваш логин и пароль.
 Так же вы перейдёте в 4 часть - Приложение.
 
-Вот алгоритм с 3 проверкам:{
+Вот алгоритм с 3 проверками:{
 
 	'use strict' --- находит ошибки в коде.
 	let login = document.getElementById('text-1'); --- создаёт переменную и кладёт в неё строку с логином.
