--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -160,6 +160,43 @@
 
 }
 
+Для кнопок используются такие свойства CSS как:
+
+#button{
+	width: 200px;
+	height: 33px;
+	border-radius: 7px;
+	color: #35cece;
+	margin-left: 33%;
+	margin-top: 3%;
+	background-color: #4b4ee5;
+	outline: none;
+	box-shadow: 0 0 20px #0004ff;
+	border: 1px solid #9347e5;
+	cursor: pointer;
+	font-weight: bold;
+}
+#button:active{
+	background-color: #0700ed;
+	color: white;
+}
+#button:hover{
+	box-shadow: 0 0 20px #c7f400;
+}
+#button1{
+	width: 200px;
+	height: 33px;
+	border-radius: 7px;
+	color: #35cece;
+	margin-top: 3%;
+	background-color: #4b4ee5;
+	outline: none;
+	box-shadow: 0 0 20px #0004ff;
+	border: 1px solid #9347e5;
+	cursor: pointer;
+	font-weight: bold;
+}
+
 Из этого сайта идут так же 3 дороги.
 
 1- ссылка "Уже есть аккаунт?". Как не трудно было догадаться она ведёт в 3 часть - вход в сеть.
