--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -162,7 +162,7 @@
 
 Для кнопок используются такие свойства CSS как:
 
-#button{
+.button{
 	width: 200px;
 	height: 33px;
 	border-radius: 7px;
@@ -176,25 +176,12 @@
 	cursor: pointer;
 	font-weight: bold;
 }
-#button:active{
+.button:active{
 	background-color: #0700ed;
 	color: white;
 }
-#button:hover{
+.button:hover{
 	box-shadow: 0 0 20px #c7f400;
-}
-#button1{
-	width: 200px;
-	height: 33px;
-	border-radius: 7px;
-	color: #35cece;
-	margin-top: 3%;
-	background-color: #4b4ee5;
-	outline: none;
-	box-shadow: 0 0 20px #0004ff;
-	border: 1px solid #9347e5;
-	cursor: pointer;
-	font-weight: bold;
 }
 
 Из этого сайта идут так же 3 дороги.
