--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -59,39 +59,39 @@
 
 Для кнопки используются такие свойства CSS как:
 
-.button{
+.button{ --- кнопка
 
-    margin-left: 35%;
+    margin-left: 35%; --- внешний отступ слева направо 35%
     
-    margin-top: 5%;
+    margin-top: 5%; --- внешний отступ сверху вниз 5%
     
-    width: 30%;
+    width: 30%; --- ширина 30%
     
-    height: 80px;
+    height: 80px; --- высота 80 пикселей
     
-    border-radius: 3px;
+    border-radius: 3px; --- радиус 3 пикселя
     
-    background-color: #ffa500;
+    background-color: #ffa500; --- задний фон этого цвета(#ffa500)
     
-    border: 1px solid #e2dc16;
+    border: 1px solid #e2dc16; --- рамка 1 пиксель сплошного этого цвета(#e2dc16)
     
-    outline: none;
+    outline: none; --- убирает цвет, стиль и ширину внешней границы
     
-    box-shadow: 0 0 40px #0400ff;
+    box-shadow: 0 0 40px #0400ff; --- делает тень 40 пикселей этого цвета(#0400ff)
     
-    cursor: pointer;
+    cursor: pointer; --- при наведении делает мышку лапкой как при наведении на ссылки
     
-    font-size: 30px;
+    font-size: 30px; --- размер символов 30 пикселей
     
-    color: blue;
+    color: blue; ---  цвет символов голубой
     
   }
   
-.button:hover{
+.button:hover{ --- кнопка при наведении
 
-    background: #ffc300;
-    
-    transition: width 2s, height 2s, background-color 2s, transform 4s;	
+    background: #ffc300; --- задний фон этого цвета(#ffc300)
+ 
+    transition: width 2s, height 2s, background-color 2s, transform 4s;	--- выполняет вышеперечисленные параметры 4 секунды 
     
   }
 
@@ -162,43 +162,43 @@
 
 Для кнопок используются такие свойства CSS как:
 
-.button{
+.button{ --- кнопка
 
-	width: 200px;
+	width: 200px; --- ширина 200 пиксилей
 	
-	height: 33px;
+	height: 33px; --- высота 33 пикселя
 	
-	border-radius: 7px;
+	border-radius: 7px; --- радиус 7 пикселей
 	
-	color: #35cece;
+	color: #35cece; --- цвет символов (#35cece)
 	
-	margin-left: 33%;
+	margin-left: 33%; --- внешний отступ слева направо 33%
 	
-	margin-top: 3%;
+	margin-top: 3%; --- внешний отступ сверху вниз 3%
 	
-	background-color: #4b4ee5;
+	background-color: #4b4ee5; --- цвет заднего фона (#4b4ee5)
 	
-	outline: none;
+	outline: none; --- убирает цвет, стиль и ширину внешней границы
 	
-	box-shadow: 0 0 20px #0004ff;
+	box-shadow: 0 0 20px #0004ff; --- тень 20 пикселей этого цвета (#0004ff)
 	
-	border: 1px solid #9347e5;
+	border: 1px solid #9347e5; --- рамка 1 пиксель сплошного этого цвета (#9347e5)
 	
-	cursor: pointer;
+	cursor: pointer; --- при наведении делает мышку лапкой как при наведении на ссылки 
 	
-	font-weight: bold;
+	font-weight: bold; --- насыщенность шрифта жирный
 	
 }
-.button:active{
+.button:active{ --- кнопка по нажатию
 
-	background-color: #0700ed;
+	background-color: #0700ed; --- задний фон этого цвета (#0700ed)
 	
-	color: white;
+	color: white; --- цвет символов белый
 	
 }
-.button:hover{
+.button:hover{ --- кнопка при наведении 
 
-	box-shadow: 0 0 20px #c7f400;
+	box-shadow: 0 0 20px #c7f400; --- тень 20 пикселей этого цвета (#c7f400)
 	
 }
 
