--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -97,7 +97,7 @@
 
 3 дорога идёт в 3 часть - вход в сеть.
 ### Регистрация:
-Это 3 по сложности страница.
+Это 2 по сложности страница.
 
 Здесь уже есть алгоритм.
 
@@ -211,3 +211,7 @@
 3- кнопка "Создать аккаунт.". Если все условия были выполнены верно, то кнопка перенесёт вас в 4 часть - Приложение.
 Об этой части мы поговорим чуть позже.
 ### Вход в сеть.
+Это 3 по сложности страница.
+
+Здесь так же есть алгоритмы, но они проще чем во 2 части.
+
