--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -59,39 +59,39 @@
 
 Для кнопки используются такие свойства CSS как:
 
-.button{ --- кнопка
+.button{ <--- кнопка
 
-    margin-left: 35%; --- внешний отступ слева направо 35%
+    margin-left: 35%; <--- внешний отступ слева направо 35%
     
-    margin-top: 5%; --- внешний отступ сверху вниз 5%
+    margin-top: 5%; <--- внешний отступ сверху вниз 5%
     
-    width: 30%; --- ширина 30%
+    width: 30%; <--- ширина 30%
     
-    height: 80px; --- высота 80 пикселей
+    height: 80px; <--- высота 80 пикселей
     
-    border-radius: 3px; --- радиус 3 пикселя
+    border-radius: 3px; <--- радиус 3 пикселя
     
-    background-color: #ffa500; --- задний фон этого цвета(#ffa500)
+    background-color: #ffa500; <--- задний фон этого цвета(#ffa500)
     
-    border: 1px solid #e2dc16; --- рамка 1 пиксель сплошного этого цвета(#e2dc16)
+    border: 1px solid #e2dc16; <--- рамка 1 пиксель сплошного этого цвета(#e2dc16)
     
-    outline: none; --- убирает цвет, стиль и ширину внешней границы
+    outline: none; <--- убирает цвет, стиль и ширину внешней границы
     
-    box-shadow: 0 0 40px #0400ff; --- делает тень 40 пикселей этого цвета(#0400ff)
+    box-shadow: 0 0 40px #0400ff; <--- делает тень 40 пикселей этого цвета(#0400ff)
     
-    cursor: pointer; --- при наведении делает мышку лапкой как при наведении на ссылки
+    cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки
     
-    font-size: 30px; --- размер символов 30 пикселей
+    font-size: 30px; <--- размер символов 30 пикселей
     
-    color: blue; ---  цвет символов голубой
+    color: blue; <---  цвет символов голубой
     
   }
   
-.button:hover{ --- кнопка при наведении
+.button:hover{ <--- кнопка при наведении
 
-    background: #ffc300; --- задний фон этого цвета(#ffc300)
+    background: #ffc300; <--- задний фон этого цвета(#ffc300)
  
-    transition: width 2s, height 2s, background-color 2s, transform 4s;	--- выполняет вышеперечисленные параметры 4 секунды 
+    transition: width 2s, height 2s, background-color 2s, transform 4s;	<--- выполняет вышеперечисленные параметры 4 секунды 
     
   }
 
