--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -117,44 +117,44 @@
 
 Вот алгоритм с 3 проверками:{
 
-	'use strict' --- находит ошибки в коде.
-	let login = document.getElementById('text-1'); --- создаёт переменную и кладёт в неё строку с логином.
-	let password = document.getElementById('text-2'); --- создаёт переменную и кладёт в неё строку с паролем.
-	let password2 = document.getElementById('text-3'); --- создаёт переменную и кладёт в неё строку с подтверждением пароля.
-	let button = document.getElementById('button'); --- создаёт переменную и кладёт в неё кнопку
-	alert("Внимание!\nЕсли вы при уже имеющимся аккаунте создадите новый, то старый аккаунт полностью удалится и заменится на этот."); ---    предупреждение.
-	button.addEventListener('click', function(){ --- воспроизводит нижеперечисленные действия по нажатию кнопки.
-	let a = document.getElementById('text-1').value; --- создаёт переменную и кладёт в неё значение строки с логином.
-	let a1 = document.getElementById('text-2').value; --- создаёт переменную и кладёт в неё значение строки с паролем
-	let a2 = document.getElementById('text-3').value; --- создаёт переменную и кладёт в неё значение строки с подтверждением пароля.
-	if(login.checkValidity()&password.checkValidity()&password2.checkValidity()){  --- проверяет все ли обязательные поля заполнены.
-	if(a[0]!=" "&a1[0]!=" "&a2[0]!=" "){ --- проверяет не является ли 1 символ пробелом.
-	if(a1 === a2){ --- проверяет равны ли пароли
-	localStorage.setItem('login3965', a); --- создаёт логин в Локальном хранилище.
-	localStorage.setItem('password3965', a1); --- создаёт пароль в Лакальном хранилище.
+	'use strict' <--- находит ошибки в коде.
+	let login = document.getElementById('text-1'); <--- создаёт переменную и кладёт в неё строку с логином.
+	let password = document.getElementById('text-2'); <--- создаёт переменную и кладёт в неё строку с паролем.
+	let password2 = document.getElementById('text-3'); <--- создаёт переменную и кладёт в неё строку с подтверждением пароля.
+	let button = document.getElementById('button'); <--- создаёт переменную и кладёт в неё кнопку
+	alert("Внимание!\nЕсли вы при уже имеющимся аккаунте создадите новый, то старый аккаунт полностью удалится и заменится на этот."); <---    предупреждение.
+	button.addEventListener('click', function(){ <--- воспроизводит нижеперечисленные действия по нажатию кнопки.
+	let a = document.getElementById('text-1').value; <--- создаёт переменную и кладёт в неё значение строки с логином.
+	let a1 = document.getElementById('text-2').value; <--- создаёт переменную и кладёт в неё значение строки с паролем
+	let a2 = document.getElementById('text-3').value; <--- создаёт переменную и кладёт в неё значение строки с подтверждением пароля.
+	if(login.checkValidity()&password.checkValidity()&password2.checkValidity()){  <--- проверяет все ли обязательные поля заполнены.
+	if(a[0]!=" "&a1[0]!=" "&a2[0]!=" "){ <--- проверяет не является ли 1 символ пробелом.
+	if(a1 === a2){ <--- проверяет равны ли пароли
+	localStorage.setItem('login3965', a); <--- создаёт логин в Локальном хранилище.
+	localStorage.setItem('password3965', a1); <--- создаёт пароль в Лакальном хранилище.
 
-	localStorage.removeItem('date'); --- удаляет 1 из элементов 4 части - Приложение.
-	localStorage.removeItem('select'); --- удаляет 1 из элементов 4 части - Приложение.
-	localStorage.removeItem('text'); --- удаляет 1 из элементов 4 части - Приложение.
-	localStorage.removeItem('pre-last'); --- удаляет 1 из элементов 4 части - Приложение.
-	localStorage.removeItem('today'); --- удаляет 1 из элементов 4 части - Приложение.
-	localStorage.removeItem('last'); --- удаляет 1 из элементов 4 части - Приложение.
+	localStorage.removeItem('date'); <--- удаляет 1 из элементов 4 части - Приложение.
+	localStorage.removeItem('select'); <--- удаляет 1 из элементов 4 части - Приложение.
+	localStorage.removeItem('text'); <--- удаляет 1 из элементов 4 части - Приложение.
+	localStorage.removeItem('pre-last'); <--- удаляет 1 из элементов 4 части - Приложение.
+	localStorage.removeItem('today'); <--- удаляет 1 из элементов 4 части - Приложение.
+	localStorage.removeItem('last'); <--- удаляет 1 из элементов 4 части - Приложение.
 
-	location.href = '../HTML/version 1.0 (3).html'; --- перемещает пользователя в 4 часть - Приложение.
+	location.href = '../HTML/version 1.0 (3).html'; <--- перемещает пользователя в 4 часть - Приложение.
 	}
-	else --- если пароли не совпадают
+	else <--- если пароли не совпадают
 	{
-		alert("Пароли не совпадают.") --- выносит ошибку "Пароли не совпадают.".
+		alert("Пароли не совпадают.") <--- выносит ошибку "Пароли не совпадают.".
 	};
 	}
-	else --- если 1 элемент- пробел
+	else <--- если 1 элемент- пробел
 	{
-	alert("В строках 1 элемент не должен быть пробелом.") --- выносит ошибку "В строках 1 элемент не должен быть пробелом.".
+	alert("В строках 1 элемент не должен быть пробелом.") <--- выносит ошибку "В строках 1 элемент не должен быть пробелом.".
 	}
 	}
-	else --- если не все поля заполнены
+	else <--- если не все поля заполнены
 	{
-		alert("Не все обязательные поля были заполнены.") --- выносит ошибку "Не все обязательные поля были заполнены.".
+		alert("Не все обязательные поля были заполнены.") <--- выносит ошибку "Не все обязательные поля были заполнены.".
 	};
 	});
 
@@ -162,43 +162,43 @@
 
 Для кнопок используются такие свойства CSS как:
 
-.button{ --- кнопка
+.button{ <--- кнопка
 
-	width: 200px; --- ширина 200 пиксилей
+	width: 200px; <--- ширина 200 пиксилей
 	
-	height: 33px; --- высота 33 пикселя
+	height: 33px; <--- высота 33 пикселя
 	
-	border-radius: 7px; --- радиус 7 пикселей
+	border-radius: 7px; <--- радиус 7 пикселей
 	
-	color: #35cece; --- цвет символов (#35cece)
+	color: #35cece; <--- цвет символов (#35cece)
 	
-	margin-left: 33%; --- внешний отступ слева направо 33%
+	margin-left: 33%; <--- внешний отступ слева направо 33%
 	
-	margin-top: 3%; --- внешний отступ сверху вниз 3%
+	margin-top: 3%; <--- внешний отступ сверху вниз 3%
 	
-	background-color: #4b4ee5; --- цвет заднего фона (#4b4ee5)
+	background-color: #4b4ee5; <--- цвет заднего фона (#4b4ee5)
 	
-	outline: none; --- убирает цвет, стиль и ширину внешней границы
+	outline: none; <--- убирает цвет, стиль и ширину внешней границы
 	
-	box-shadow: 0 0 20px #0004ff; --- тень 20 пикселей этого цвета (#0004ff)
+	box-shadow: 0 0 20px #0004ff; <--- тень 20 пикселей этого цвета (#0004ff)
 	
-	border: 1px solid #9347e5; --- рамка 1 пиксель сплошного этого цвета (#9347e5)
+	border: 1px solid #9347e5; <--- рамка 1 пиксель сплошного этого цвета (#9347e5)
 	
-	cursor: pointer; --- при наведении делает мышку лапкой как при наведении на ссылки 
+	cursor: pointer; <--- при наведении делает мышку лапкой как при наведении на ссылки 
 	
-	font-weight: bold; --- насыщенность шрифта жирный
+	font-weight: bold; <--- насыщенность шрифта жирный
 	
 }
-.button:active{ --- кнопка по нажатию
+.button:active{ <--- кнопка по нажатию
 
-	background-color: #0700ed; --- задний фон этого цвета (#0700ed)
+	background-color: #0700ed; <--- задний фон этого цвета (#0700ed)
 	
-	color: white; --- цвет символов белый
+	color: white; <--- цвет символов белый
 	
 }
-.button:hover{ --- кнопка при наведении 
+.button:hover{ <--- кнопка при наведении 
 
-	box-shadow: 0 0 20px #c7f400; --- тень 20 пикселей этого цвета (#c7f400)
+	box-shadow: 0 0 20px #c7f400; <--- тень 20 пикселей этого цвета (#c7f400)
 	
 }
 
