--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -202,6 +202,34 @@
 	
 }
 
+Для текстовых полей используются такие свойства CSS как:
+
+#text-1{
+
+	width: 400px;
+
+	height: 33px;
+
+	border-radius: 3px;
+
+	margin-left: 33%;
+
+	margin-top: 1%;
+
+	border: 1px solid blue;
+
+	text-align: center; 
+
+	display: block;
+
+	box-shadow: 0 0 30px #00ff5d;
+
+	color: #4b4ee5;
+
+	font-weight: bold;
+					
+}
+
 Из этого сайта идут так же 3 дороги.
 
 1- ссылка "Уже есть аккаунт?". Как не трудно было догадаться она ведёт в 3 часть - вход в сеть.
