--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -204,29 +204,29 @@
 
 Для текстовых полей используются такие свойства CSS как:
 
-#text-1{
+#text-1{ <--- текстовая строка
 
-	width: 400px;
+	width: 400px; <--- ширина 400 пикселей
 
-	height: 33px;
+	height: 33px; <--- высота 33 пикселя
 
-	border-radius: 3px;
+	border-radius: 3px; <--- радиус 3 пикселя
 
-	margin-left: 33%;
+	margin-left: 33%; <--- внешний отступ слево направо 33%
 
-	margin-top: 1%;
+	margin-top: 1%; <--- внешний отступ сверху вниз 1%
 
-	border: 1px solid blue;
+	border: 1px solid blue; <--- рамка 1 пиксель сплошный синий
 
-	text-align: center; 
+	text-align: center; <--- текст в центре
 
-	display: block;
+	display: block; <--- блочный элемент
 
-	box-shadow: 0 0 30px #00ff5d;
+	box-shadow: 0 0 30px #00ff5d; <--- тень 30 пикселей этого цвета(#00ff5d)
 
-	color: #4b4ee5;
+	color: #4b4ee5; <--- цвет символов (#4b4ee5)
 
-	font-weight: bold;
+	font-weight: bold; <--- насыщенность шрифта жирный
 					
 }
 
