--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -59,7 +59,7 @@
 
 Для кнопки используются такие свойства CSS как:
 
-{
+{ <---  всегда
 
     margin-left: 35%; <--- внешний отступ слева направо 35%
     
@@ -87,7 +87,7 @@
     
   }
   
-  {
+  { <---  по наведению 
 
     background: #ffc300; <--- задний фон этого цвета(#ffc300)
  
@@ -115,7 +115,8 @@
 Соответственно если эти 3 проверки не выдали вам ошибки, т.е. вы ввели всё верно, то в Локальное хранилище добавится ваш логин и пароль.
 Так же вы перейдёте в 4 часть - Приложение.
 
-Вот алгоритм с 3 проверками:{
+Вот алгоритм с 3 проверками:
+{
 
 	'use strict' <--- находит ошибки в коде.
 	let login = document.getElementById('text-1'); <--- создаёт переменную и кладёт в неё строку с логином.
@@ -162,7 +163,7 @@
 
 Для кнопок используются такие свойства CSS как:
 
-{
+{ <---  всегда
 
 	width: 200px; <--- ширина 200 пиксилей
 	
@@ -189,14 +190,14 @@
 	font-weight: bold; <--- насыщенность шрифта жирный
 	
 }
-{
+{ <---  по нажатию
 
 	background-color: #0700ed; <--- задний фон этого цвета (#0700ed)
 	
 	color: white; <--- цвет символов белый
 	
 }
-{
+{ <---  по наведению
 
 	box-shadow: 0 0 20px #c7f400; <--- тень 20 пикселей этого цвета (#c7f400)
 	
@@ -204,7 +205,7 @@
 
 Для текстовых полей используются такие свойства CSS как:
 
-{
+{ <---  всегда
 
 	width: 400px; <--- ширина 400 пикселей
 
