--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -103,13 +103,13 @@
 
 Здесь есть 3 проверки:
 
-1 проверка - проверка на заполнение полей.
+1- проверка на заполнение полей.
 (Если заполнены не все поля-вылетит ошибка "Не все обязательные поля были заполнены.".)
 
-2 проверка - проверка на 1 элемент.
+2- проверка на 1 элемент.
 (Если 1 элемент - пробел-вылетит ошибка "В строках 1 элемент не должен быть пробелом.".)
 
-3 проверка - проверка на поля с паролями.
+3- проверка на поля с паролями.
 (Если пароли не совпадают-вылетит ошибка "Пароли не совпадают.".)
 
 Соответственно если эти 3 проверки не выдали вам ошибки, т.е. вы ввели всё верно, то в Локальное хранилище добавится ваш логин и пароль.
@@ -132,7 +132,7 @@
 	if(a[0]!=" "&a1[0]!=" "&a2[0]!=" "){ <--- проверяет не является ли 1 символ пробелом.
 	if(a1 === a2){ <--- проверяет равны ли пароли
 	localStorage.setItem('login3965', a); <--- создаёт логин в Локальном хранилище.
-	localStorage.setItem('password3965', a1); <--- создаёт пароль в Лакальном хранилище.
+	localStorage.setItem('password3965', a1); <--- создаёт пароль в Локальном хранилище.
 
 	localStorage.removeItem('date'); <--- удаляет 1 из элементов 4 части - Приложение.
 	localStorage.removeItem('select'); <--- удаляет 1 из элементов 4 части - Приложение.
@@ -244,3 +244,13 @@
 
 Здесь так же есть алгоритмы, но они проще чем во 2 части.
 
+Здесь так же как и в прошлой части есть 3 проверки:
+
+1 проверка, все ли данные введены.
+(Если нет, то вылетит ошибка"Были введены не все данные.".)
+
+2 проверка, существует ли ваобще аккаунт на этом компьютере.
+(Если не существует, то велетит ошибка"На этом компьютере аккаунта не существует.Создайте его по ссылке ниже.".)
+
+3 проверка - на правильность логина и пароля.
+(Если пароль или логин были введены не верно, то вылетит ошибка"Был введён неверный логин или пароль.".)
