--- a/Documents/Отчёт.md
+++ b/Documents/Отчёт.md
@@ -250,7 +250,7 @@
 (Если нет, то вылетит ошибка"Были введены не все данные.".)
 
 2 проверка, существует ли ваобще аккаунт на этом компьютере.
-(Если не существует, то велетит ошибка"На этом компьютере аккаунта не существует.Создайте его по ссылке ниже.".)
+(Если не существует, то вылетит ошибка"На этом компьютере аккаунта не существует.Создайте его по ссылке ниже.".)
 
 3 проверка - на правильность логина и пароля.
 (Если пароль или логин были введены не верно, то вылетит ошибка"Был введён неверный логин или пароль.".)
